PROJECT (GO2OGS)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)
FIND_PACKAGE(VTK 6.1 REQUIRED NO_MODULE)
INCLUDE(${VTK_USE_FILE})

SET(CMAKE_CXX_FLAGS "-std=c++11 -Wno-deprecated")

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty
)

ADD_EXECUTABLE(resample resample.cpp)
TARGET_LINK_LIBRARIES(resample ${VTK_LIBRARIES})

ADD_EXECUTABLE(IntegrateFaultFacesets IntegrateFaultFacesets.cpp)
TARGET_LINK_LIBRARIES(IntegrateFaultFacesets ${VTK_LIBRARIES})
